--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.4.1"
+    "@astrojs/solid-js": "^2.2.0",
+    "astro": "^2.4.1",
+    "sass": "^1.62.1",
+    "solid-js": "^1.7.5"
   }
 }
